Issue on Safari (left nav isn't automatically collapsing) (#16574)

--- a/docs/assets/scss/_yb_page_style.scss
+++ b/docs/assets/scss/_yb_page_style.scss
@@ -297,7 +297,7 @@
   }
 }
 
-.content-parent {
+body:not(.is-safari) .content-parent {
   container-type: inline-size;
   container-name: content-area;
 }
